# PyLlmClient

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mock_clients.py  mock_models.py  models.py  pyproject.toml  test_models.py
examples/: example_1.py
pyllmclient/: __init__.py  llmClient.py  mock_models.py
src/: llmClient.py  mock_models.py
tests/: test_logging.py  test_models.py
